--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-color": "^2.0.3",
     "cross-spawn": "^7.0.3",
     "globby": "^13.1.2",
     "minimist": "^1.2.7",
