--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "discord-profile-scraper",
+  "name": "backup",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": "main.js",
+  "pkg": {
+    "scripts": "main.js",
+    "targets" : ["node16-win-x64"]
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "string-argv": "^0.3.1",
     "cli-color": "^2.0.3",
-    "cross-spawn": "^7.0.3",
-    "globby": "^13.1.2",
-    "minimist": "^1.2.7",
-    "moment": "^2.29.4",
-    "node-fetch": "^3.2.10",
-    "string-argv": "^0.3.1"
+    "cross-spawn": "^7.0.3"
   }
 }
