--- a/config.example.json
+++ b/config.example.json
@@ -21,6 +21,12 @@
             "guildId": "869237470565372385",
             "guildName": "another-guild",
             "enabled": true
+        },
+        {
+            "tokenName": "myaccount1",
+            "guildId": "@me",
+            "guildName": "myaccount1-dms",
+            "enabled": true
         }
     ]
 }
