--- a/config.example.json
+++ b/config.example.json
@@ -14,19 +14,22 @@
             "tokenName": "myaccount1",
             "guildId": "869237470565392384",
             "guildName": "tyrrrz",
-            "enabled": true
+            "enabled": true,
+            "throttleHours": 71.5
         },
         {
             "tokenName": "myaccount2",
             "guildId": "869237470565372385",
             "guildName": "another-guild",
-            "enabled": true
+            "enabled": true,
+            "throttleHours": 24
         },
         {
             "tokenName": "myaccount1",
             "guildId": "@me",
             "guildName": "myaccount1-dms",
-            "enabled": true
+            "enabled": true,
+            "throttleHours": 3
         }
     ]
 }
